--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "JavaScript for TA [Q2, 2024]",
   "main": "topic10.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
